# ContextPrior-PLM

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
configs/backbones/: esm2_650m.yaml
configs/contextprior/: default_graph.yaml  stability_dense_f10_s5_t15.yaml
configs/data/: saprothub_meta_stability_official_csv.yaml
configs/experiments/: biomap_selected_stable_variant.yaml
configs/methods/: ours.yaml
configs/runtime/: seed42.yaml
configs/scales/: xlarge_650m.yaml
configs/stability_experiments/: stability_main.yaml
configs/train_modes/: frozen.yaml
scripts/: run_finetune.py  run_stability_finetune.py  stability_common.py
scripts/contextprior_phases/: _model_matrix.sh  _runtime_overrides.sh  run_biomap_selected.sh  run_stability_main.sh
src/contextPrior/: __init__.py  config.py
src/contextPrior/data/: __init__.py  biomap.py  collators.py  motif_graph_features.py  mutations.py  splits.py  stability.py  tokenization.py
src/contextPrior/models/: __init__.py  backbone.py  esm_residue_adapter.py  factory.py  graph.py  heads.py  layers.py  modeling_esm.py  motif_encoder.py  motif_encoder_sdpa.py  param_count.py
src/contextPrior/tasks/: __init__.py  metrics.py  registry.py
src/contextPrior/training/: __init__.py  logger.py  trainer.py
src/contextPrior/utils/: __init__.py  config.py  io.py  seed.py
