[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "contextprior-plm"
version = "0.1.0"
description = "ContextPrior-PLM training code for protein stability and BioMap tasks."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
